<resources>
    <string name="app_name">Cookry</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="app_update_title">App Update</string>
    <string name="app_update_btn">Update</string>
    <string name="app_cancel_btn">Cancel</string>

    <string name="search">Search</string>
    <string name="no_item_found">No item found..</string>
    <string name="no_fav_found">No favorite found..</string>
    <string name="invalid">Invalid sign salt.</string>
    <string name="no_data">No data fount..</string>
    <string name="search_recipe">Search Recipes</string>
    <string name="license_msg">You are using invalid License or Package name is already in use, for more information contact us: info@viaviweb.com or viaviwebtech@gmail.com</string>
    <string name="restart_msg">Please restart your app something went to wrong</string>

    <string name="home_view_all">More</string>
    <string name="detail_ingredient">Ingredients</string>
    <string name="detail_direction">Directions</string>
    <string name="share_message">Download app from this link</string>
    <string name="share_recipe_title">Recipe Title :- </string>
    <string name="share_recipe_ingredient">Recipe Ingredient :- </string>
    <string name="share_recipe_direction">Recipe Direction :- </string>
    <string name="share_recipe_video">Recipe Video :- </string>

    <string name="dialog_error">Error..</string>
    <string name="dialog_warning">Warning..</string>
    <string name="dialog_success">Success</string>
    <string name="dialog_ok">Logout</string>
    <string name="dialog_no">Cancel</string>
    <string name="login_require">Login require click OK and go to login screen</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="dialog_logout">Logout</string>

    <string name="network_msg">No Network Connection!!!</string>
    <string name="no_data_found">No data found!!</string>

    <!--Drawer Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_most">Most View</string>
    <string name="menu_category">Categories</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_more">More App</string>
    <string name="menu_share">Share App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="notification_title">Enable Push Notification</string>
    <string name="loading">Loading..</string>

    <string name="home_category">Categories</string>
    <string name="home_slider">Featured Recipes</string>
    <string name="home_latest">Latest Recipe</string>
    <string name="home_popular">Popular Recipe</string>
    <string name="title_review">Reviews</string>
    <string name="no_review">No review found</string>
    <string name="rating">Rate &amp; Reviews</string>
    <string name="rating_title">Your Message :-</string>
    <string name="write_here">Write Here</string>
    <string name="submit">Submit</string>
    <string name="require_review">Add review</string>
    <string name="favorite_title">Favorite</string>
    <string name="share_title">Share</string>
    <string name="view_title">view</string>
    <string name="rating_total_title">Rating</string>
    <string name="tap_to_rate">Tap to your rate</string>

    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <string name="welcome_back">Welcome Back !</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="forgot_description">Enter your email address below and  we\'ll send you email with password</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="password_login">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="facebook">Login with Facebook</string>
    <string name="gmail">Login with Gmail</string>
    <string name="skip">Skip</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">Don\'t Have an Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="send">Send</string>
    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="phone_login">Phone</string>
    <string name="need_login">You have to Login first</string>

    <string name="favourite_remove">Remove from favorite</string>
    <string name="favourite_add">Added to favorite</string>

    <string name="facebook_app_id">xxxx</string>
    <string name="fb_login_protocol_scheme">fb3xxxxx</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="more_app_url">https://play.google.com/store/apps/dev?id=7157478532572017100</string>
    <string name="gdpr_privacy_link">https://termsfeed.com/blog/privacy-policy-admob/</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <string name="sign_up_accept">By Signing in you accept %s  </string>
    <string name="please_accept">Please select accept checkbox </string>
    <!-- youtube -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youtube_api_key">xxxxx</string>

    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="exit_msg">Are You Sure You Want To Quit?</string>
    <string name="default_notification_channel_id">Recipe Box</string>
    <string name="wanna_cook_something_delicious">Wanna Cook \nSomething Delicious?</string>
    <string name="let_s_try_our_best_recipe_simple_to_made_and_tasty">Let’s try our best recipe \nsimple to made and tasty</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="or_sing_up_with">Or sign up with</string>
    <string name="by_signing_in_you_accept">By signing in you accept</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="password">Password</string>
    <string name="about_us">About us</string>
    <string name="virsion">Virsion</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_etiam_eu_turpis_molestie_dictum_est_a_mattis_tellus_sed_dignissim_metus_nec_fringilla_accumsan_risus_sem_sollicitudin_lacus_ut_interdum_tellus">Lorem ipsum dolor sit amet, \nconsectetur adipiscing elit. Etiam eu \nturpis molestie, dictum est a, \nmattis tellus. Sed dignissim, metus nec \nfringilla accumsan, risus sem \nsollicitudin lacus, ut interdum tellus</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="by_signing_up_you_accept">By signing up you accept</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="latest">Latest</string>
    <string name="feature_recipes">Feature recipes</string>
    <string name="saved">Saved</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="log_in">log in</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_your_account">Create your account</string>
    <string name="what_do_you_want_to_cook_today">What do you, want to cook today?</string>
    <string name="find_delicious_recipe_here">Find delicious recipe here</string>
    <string name="category">Category</string>
    <string name="popular_recips">Popular recips</string>
    <string name="see_all">See all</string>

</resources>
