<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/dark_green">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_bg_image"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-51dp"
        tools:layout_editor_absoluteY="60dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_top_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/dark_green"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/txt_sign_up_continue"
                app:layout_constraintStart_toStartOf="@+id/editText_password_register" />

            <TextView
                android:id="@+id/txt_sign_up_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_your_account"
                android:textColor="@color/dark_green"
                android:layout_marginBottom="30dp"
                app:layout_constraintStart_toStartOf="@+id/editText_password_register"
                app:layout_constraintBottom_toTopOf="@+id/editText_name_register"/>
            <EditText
                android:id="@+id/editText_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:paddingVertical="15dp"
                android:paddingStart="12dp"
                android:drawablePadding="10dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/custom_edittext_bg"
                app:layout_constrainedWidth="true"
                android:drawableStart="@drawable/ic_profile_name"
                app:layout_constraintStart_toStartOf="@+id/editText_password_register"
                app:layout_constraintEnd_toEndOf="@+id/editText_password_register"
                app:layout_constraintBottom_toTopOf="@+id/editText_email_register"/>


            <EditText
                android:id="@+id/editText_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext_bg"
                android:drawableStart="@drawable/ic_email_login"
                app:layout_constraintStart_toStartOf="@+id/editText_password_register"
                android:hint="@string/email"
                android:paddingStart="12dp"
                android:drawablePadding="10dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="18dp"
                app:layout_constraintBottom_toTopOf="@+id/editText_password_register"
                app:layout_constraintEnd_toEndOf="@+id/editText_password_register"
                app:layout_constrainedWidth="true"/>

            <EditText
                android:id="@+id/editText_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext_bg"
                android:drawableStart="@drawable/ic_password_login"
                android:hint="Create a strong password"
                android:paddingVertical="15dp"
                android:paddingStart="12dp"
                android:drawablePadding="10dp"
                android:layout_marginBottom="18dp"
                app:layout_constraintBottom_toTopOf="@+id/txt_remember"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/checkbox_login_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                app:layout_constraintStart_toStartOf="@+id/editText_password_register"
                app:layout_constraintBottom_toTopOf="@+id/textSignUpAccept"/>
            <TextView
                android:id="@+id/txt_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@+id/checkbox_login_activity"
                app:layout_constraintBottom_toBottomOf="@+id/checkbox_login_activity"
                app:layout_constraintTop_toTopOf="@+id/checkbox_login_activity"/>


            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="18dp"
                app:layout_constraintBottom_toTopOf="@+id/button_submit"
                app:layout_constraintStart_toStartOf="@+id/checkbox_login_activity"
                android:background="@drawable/checkbox"
                android:scaleX="0.8"
                android:scaleY="0.8"/>

            <TextView
                android:id="@+id/textSignUpAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/by_signing_up_you_accept"
                app:layout_constraintStart_toEndOf="@+id/checkbox"
                app:layout_constraintBottom_toBottomOf="@+id/checkbox"
                app:layout_constraintTop_toTopOf="@+id/checkbox"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                app:layout_constraintBottom_toBottomOf="@+id/textSignUpAccept"
                android:textColor="@color/light_green"
                app:layout_constraintTop_toTopOf="@+id/textSignUpAccept"
                app:layout_constraintStart_toEndOf="@+id/textSignUpAccept"/>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/button_skip_login_activity"
                android:background="@drawable/ic_rectangle_login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/txt_sing_up_with"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/button_skip_login_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle_skip"
                android:text="@string/skip_for_now"
                app:layout_constraintStart_toEndOf="@+id/button_submit"
                android:textColor="@color/light_green"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_submit"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="22dp"
                app:layout_constraintHorizontal_bias="0.497"/>

            <TextView
                android:id="@+id/txt_sing_up_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/or_sing_up_with"
                android:textSize="12dp"
                app:layout_constraintBottom_toTopOf="@+id/view_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <!--            <LinearLayout-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content">-->

            <!--            </LinearLayout>-->


            <View
                android:id="@+id/view_google"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:background="@drawable/custum_google_bg"
                app:layout_constraintTop_toBottomOf="@+id/button_submit"
                app:layout_constraintBottom_toTopOf="@+id/don_t_have_an_account"
                app:layout_constraintEnd_toStartOf="@+id/view_facebook"
                app:layout_constraintStart_toStartOf="@+id/txt_sing_up_with" />

            <ImageView
                android:id="@+id/linearLayout_google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_logo"
                app:layout_constraintBottom_toBottomOf="@+id/view_google"
                app:layout_constraintEnd_toEndOf="@+id/view_google"
                app:layout_constraintStart_toStartOf="@+id/view_google"
                app:layout_constraintTop_toTopOf="@+id/view_google" />


            <FrameLayout
                android:id="@+id/view_facebook"
                android:layout_width="61dp"
                android:layout_height="44dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@+id/button_skip_login_activity"
                android:background="@drawable/custom_facebook_bg"
                app:layout_constraintBottom_toTopOf="@+id/don_t_have_an_account"
                app:layout_constraintEnd_toEndOf="@+id/txt_sing_up_with"
                app:layout_constraintStart_toEndOf="@+id/view_google" />

            <ImageView
                android:id="@+id/frameLayout_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_logo"
                app:layout_constraintBottom_toBottomOf="@+id/view_facebook"
                app:layout_constraintEnd_toEndOf="@+id/view_facebook"
                app:layout_constraintStart_toStartOf="@+id/view_facebook"
                app:layout_constraintTop_toTopOf="@+id/view_facebook" />

            <TextView
                android:id="@+id/don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/dark_black"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView_signup_login"
                app:layout_constraintStart_toStartOf="@+id/txt_sing_up_with" />

            <TextView
                android:id="@+id/textView_signup_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/dark_green"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/don_t_have_an_account"
                app:layout_constraintEnd_toEndOf="@+id/txt_sing_up_with"
                app:layout_constraintStart_toEndOf="@+id/don_t_have_an_account" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>